--- a/vanilla-spring-boot/pom.xml
+++ b/vanilla-spring-boot/pom.xml
@@ -12,7 +12,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
-    <docker.image.tag>robsacr.azurecr.io/camunda/${project.artifactId}:${project.version}</docker.image.tag>
+    <docker.image.tag>azadiacr.azurecr.io/camunda/${project.artifactId}:${project.version}</docker.image.tag>
   </properties>
   
   <dependencyManagement>
