--- a/vanilla-spring-boot/pom.xml
+++ b/vanilla-spring-boot/pom.xml
@@ -5,8 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.camunda.example</groupId>
-  <artifactId>camunda-vanilla-boot</artifactId>
-  <version>7.14.0</version>
+  <artifactId>camunda-fab</artifactId>
+  <version>1.0</version>
+  <!-- <artifactId>{project.artifactId}</artifactId> -->
+  <!-- <version>${project.version}</version> -->
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
